# paladium-disabler

./: CMakeLists.txt  Makefile
.github/workflows/: release.yml
dependencies/jni/: jni.h
dependencies/jni/win32/bridge/: AccessBridgeCallbacks.h  AccessBridgeCalls.c  AccessBridgeCalls.h  AccessBridgePackages.h
includes/: disabler.h  hook.h  offsets.h
src/: .clangd  hook.c  main.c
srcs/: disabler.cpp  library.cpp
